--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,7 @@
 /**screen**/
 @import './screen/screens';
+@import './screen/screen_details';
 
 /**Componentes**/
 @import 'components/container';
+@import "components/header_component";
