--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -3,17 +3,15 @@
   justify-content: space-between;
   background: white;
   width: auto;
-  max-width: 70rem; /*1110px*/
+  max-width: 70%;
   height: auto;
-  max-height: 50rem; /* 800px */
   overflow-y: auto;
   box-shadow: 0px 1.25rem 2.5rem rgba(0, 0, 0, 0.05);
-  border-radius: 0.625rem; /* 10px */
   margin: auto;
   display: flex;
   position: relative;
   z-index: 100;
-  padding: 4vh;
+  //padding: 4vh;
   @media (max-width: 60rem) {
     height: auto;
     max-height: none;
