--- a/src/styles/components/_header_component.scss
+++ b/src/styles/components/_header_component.scss
@@ -1,10 +1,82 @@
 .screens_details_header {
   display: flex;
   flex-direction: row;
-  background-color: yellowgreen;
-  justify-content: space-evenly;
+  background-color: #FFE600;
+  justify-content: center;
   align-items: center;
   max-width: 100%;
-  border-bottom: black;
-  border-bottom-width:medium;
+  width: 100%;
+  margin-bottom: 14px;
+  padding: 10px;
+}
+
+.box_input_text {
+  display: flex;
+  margin-left: 3px;
+  width: 70%;
+  padding: 10px;
+  border-color: #EEEEEE;
+  border-width: 0.2px;
+  font-size: 18px;
+}
+
+@media only screen and (max-width: 1193px){
+  .box_input_text {
+    padding: 8px;
+  }
+}
+
+@media only screen and (max-width: 700px){
+  .box_input_text {
+    font-size: 16px;
+    padding: 6px;
+  }
+}
+
+@media only screen and (max-width: 500px){
+  .box_input_text {
+    font-size: 10px;
+    padding: 8px;
+  }
+}
+
+.box_search_icon {
+  display: flex;
+  width: 3%;
+  max-width: 3%;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  background-color: #EEEEEE;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  padding: 10px;
+  border-color: #EEEEEE;
+}
+
+.box_img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 55%;
+}
+
+.box_img_mel {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 65%;
+  height: auto;
+}
+
+@media only screen and (max-width: 500px){
+  .box_img_mel {
+    width: 30%;
+  }
+}
+
+@media only screen and (max-width: 700px){
+  .box_img_mel {
+    width: 40%;
+  }
 }
