--- a/src/styles/screen/_screen_details.scss
+++ b/src/styles/screen/_screen_details.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  max-width: 70rem; /*1110px*/
+  max-width: 100%;
   border-bottom: black;
   border-bottom-width:medium;
 }
@@ -14,18 +14,17 @@
   align-items: flex-start;
 }
 
-.screens_title {
-  font-size: medium;
-  font-weight: bold;
-}
-
 .screen_details_button {
-  background-color: #61dafb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3483FA;
   color: white;
   padding: 2vh;
+  width: 80%;
   text-align: center;
   border-width: medium;
-  border-color: #61dafb;
+  border-color: #3483FA;
   border-radius: 0.325rem;;
 }
 
@@ -34,4 +33,36 @@
   flex-direction: column;
   justify-content: space-evenly;
   max-width: 60rem;
+  margin-left: 32px;
 }
+
+.screen_title_description {
+  font-weight: 400;
+  font-size: 28px;
+}
+
+.screen_description {
+  font-weight: 400;
+  font-size: 16px;
+  text-align: left;
+  margin-bottom: 16px;
+}
+.screen_title_price {
+  font-weight: 400;
+  font-size: 46px;
+  margin-bottom: 32px;
+}
+.screen_title_detail {
+  font-weight: bold;
+  font-size: 24px;
+  margin-bottom: 32px;
+}
+
+.title_condition {
+  font-weight: 400;
+  font-size: 14px;
+  margin-top: 32px;
+  margin-bottom: 14px;
+}
+
+
