·UPDATE -Se actualiza pantallas de detalle

--- a/src/styles/screen/_screen_details.scss
+++ b/src/styles/screen/_screen_details.scss
@@ -32,7 +32,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  max-width: 60rem;
+  //max-width: 60rem;
+  width: 680px;
   margin-left: 32px;
 }
 
