--- a/src/styles/components/_header_component.scss
+++ b/src/styles/components/_header_component.scss
@@ -10,14 +10,16 @@
   padding: 10px;
 }
 
+
 .box_input_text {
   display: flex;
-  margin-left: 3px;
-  width: 70%;
+  width: 67%;
   padding: 10px;
   border-color: #EEEEEE;
   border-width: 0.2px;
   font-size: 18px;
+  justify-content: center;
+  align-items: center;
 }
 
 @media only screen and (max-width: 1193px){
@@ -58,14 +60,14 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 55%;
+  width: 50%;
 }
 
 .box_img_mel {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 65%;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 60%;
   height: auto;
 }
 
