UPDATE - Se actualiza busqueda

--- a/src/styles/screen/_screens.scss
+++ b/src/styles/screen/_screens.scss
@@ -119,3 +119,9 @@ body {
 	font-weight: 400;
 	font-size: 24px;
 }
+
+.screens_title_error {
+	font-weight: 400;
+	font-size: 14px;
+	color: red;
+}
