--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
 /**screen**/
 @import './screen/screens';
 @import './screen/screen_details';
+@import "screen/screen_app";
 
 /**Componentes**/
 @import 'components/container';
