--- a/src/styles/screen/_screens.scss
+++ b/src/styles/screen/_screens.scss
@@ -18,7 +18,6 @@ body {
 	flex-direction: row;
 	justify-content: space-around;
 	max-width: 100%;
-	//border-bottom-size: 0.5px;
 	border-bottom-style: solid;
 	border-bottom-color: #EEEEEE;
 	margin-bottom: 16px;
@@ -56,6 +55,11 @@ body {
 	width: 15%;
 	max-width: 15%;
 	margin: 16px;
+}
+
+.screen_img {
+	width:180px;
+	height:180px
 }
 
 .screens_container_card {
@@ -124,4 +128,56 @@ body {
 	font-weight: 400;
 	font-size: 14px;
 	color: red;
+}
+
+@media only screen and (max-width: 900px){
+	.screen_img {
+		width:90px;
+		height:90px
+	}
+	.text_price {
+		font-size: 14px;
+	}
+
+	.screens_title_error {
+		font-size: 8px;
+	}
+
+	.screens_title {
+		font-size: 11px;
+	}
+
+	.screens_subtitle {
+		font-size: 8px;
+	}
+
+	.screens_title_body_header {
+		font-size: 8px;
+	}
+}
+
+@media only screen and (max-width: 1200px){
+	.screen_img {
+		width:90px;
+		height:90px
+	}
+	.text_price {
+		font-size: 15px;
+	}
+
+	.screens_title_error {
+		font-size: 9px;
+	}
+
+	.screens_title {
+		font-size: 12px;
+	}
+
+	.screens_subtitle {
+		font-size: 9px;
+	}
+
+	.screens_title_body_header {
+		font-size: 9px;
+	}
 }
