UPDATE -Se actualiza pantalla detalle y pantalla del listado

--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -12,6 +12,7 @@
   position: relative;
   z-index: 100;
   @media (max-width: 60rem) {
+    max-width: 90%;
     height: auto;
     max-height: none;
   }
