--- a/src/styles/screen/_screen_details.scss
+++ b/src/styles/screen/_screen_details.scss
@@ -1,25 +1,62 @@
 .screens_details_root {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   width: 100%;
   max-width: 100%;
-  border-bottom: black;
-  border-bottom-width:medium;
 }
+
+.screens_img_details_product {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 65%;
+  max-width: 100%;
+  @media (max-width: 60rem) {
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    max-width: 100%;
+  }
+}
+
+.screens_text_details_product {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 35%;
+  max-width: 100%;
+  margin-top: 32px;
+  margin-right: 32px;
+  @media (max-width: 60rem) {
+    width: 30%;
+    max-width: 100%;
+    margin-top: 16px;
+  }
+}
+
 
 .screen_img_details {
   width: 680px;
   height: auto;
-  padding: 16px;
 }
 
 .screens_title_container{
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 14px;
+}
+
+.screens_details_bottom {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  width: 100%;
+  max-width: 100%;
 }
+
 
 .screen_details_button {
   display: flex;
@@ -27,8 +64,9 @@
   align-items: center;
   background-color: #3483FA;
   color: white;
-  padding: 2vh;
+  padding: 4vh;
   width: 80%;
+  max-width: 80%;
   text-align: center;
   border-width: medium;
   border-color: #3483FA;
@@ -39,9 +77,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  //width: 680px;
   max-width: 68% ;
-  margin-left: 32px;
+  margin-left: 28px;
+  margin-bottom: 16px;
 }
 
 .screen_title_description {
@@ -53,7 +91,6 @@
   font-weight: 400;
   font-size: 16px;
   text-align: left;
-  margin-bottom: 16px;
 }
 .screen_title_price {
   font-weight: 400;
@@ -70,8 +107,6 @@
   font-weight: 400;
   font-size: 14px;
   margin-top: 32px;
-  margin-bottom: 14px;
-  padding: 14px;
 }
 
 @media only screen and (max-width: 1200px){
