--- a/src/styles/components/_header_component.scss
+++ b/src/styles/components/_header_component.scss
@@ -1,84 +1,101 @@
 .screens_details_header {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   background-color: #FFE600;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
   max-width: 100%;
   width: 100%;
-  margin-bottom: 14px;
-  padding: 10px;
+  margin-bottom: 16px;
 }
 
+.screens_details_form {
+  display: flex;
+  flex-direction: row;
+  width: auto;
+  height: auto;
+  margin: auto;
+  max-width: 80%;
+  margin-top: 14px;
+  margin-bottom: 14px;
+  @media (max-width: 60rem) {
+    max-width: 90%;
+    height: auto;
+    max-height: none;
+  }
+}
+.box_img_search {
+  display: flex;
+  width: 10%;
+  max-width: 10%;
+  height: auto;
+  justify-content: flex-start;
+  align-items: center;
+  @media (max-width: 60rem) {
+    width: 15%;
+    max-width: 15%;
+  }
+}
+.box_input_icon_search {
+  display: flex;
+  width: 90%;
+  max-width: 90%;
+  height: auto;
+  @media (max-width: 60rem) {
+  width: 85%;
+  max-width: 85%;
+}
+
+}
 
 .box_input_text {
   display: flex;
-  width: 67%;
+  width: 100%;
   padding: 10px;
   border-color: #EEEEEE;
-  border-width: 0.2px;
   font-size: 18px;
-  justify-content: center;
-  align-items: center;
-}
-
-@media only screen and (max-width: 1193px){
-  .box_input_text {
-    padding: 8px;
-  }
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 @media only screen and (max-width: 700px){
   .box_input_text {
     font-size: 16px;
-    padding: 6px;
   }
-}
-
-@media only screen and (max-width: 500px){
-  .box_input_text {
-    font-size: 10px;
-    padding: 8px;
-  }
-}
-
-.box_search_icon {
-  display: flex;
-  width: 3%;
-  max-width: 3%;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  background-color: #EEEEEE;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  padding: 9.5px;
-  border-color: #EEEEEE;
 }
 
 .box_img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+  width: 80px;
 }
 
 .box_img_mel {
-  display: block;
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 60%;
-  height: auto;
-}
-
-@media only screen and (max-width: 500px){
-  .box_img_mel {
-    width: 30%;
-  }
+  width: 30px;
+  height: 30px;
 }
 
 @media only screen and (max-width: 700px){
-  .box_img_mel {
-    width: 40%;
+  .box_input_text {
+    font-size: 10px;
   }
+  .box_img {
+    width: 30px;
+    height: 30px;
+  }
+  .box_img_mel {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+
+.box_search_icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #EEEEEE;
+  padding: 9px;
+  border-color: #EEEEEE;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
