--- a/src/styles/components/_header_component.scss
+++ b/src/styles/components/_header_component.scss
@@ -41,10 +41,9 @@
   max-width: 90%;
   height: auto;
   @media (max-width: 60rem) {
-  width: 85%;
-  max-width: 85%;
-}
-
+    width: 85%;
+    max-width: 85%;
+  }
 }
 
 .box_input_text {
@@ -99,3 +98,50 @@
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+
+.list_search {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: white;
+  width: 70.6%;
+  padding: 10px;
+  max-width: 100%;
+  box-shadow: 0px 1.25rem 2.5rem rgba(0, 0, 0, 0.05);
+  position: absolute;
+  z-index: 200;
+  top: 65px;
+  right: 10%;
+
+  @media (max-width: 746px) {
+    max-width: 100%;
+    height: auto;
+    max-height: none;
+    top: 51px;
+    right: 5%;
+    width: 74%;
+  }
+  @media (max-width: 317px) {
+    max-width: 100%;
+    height: auto;
+    max-height: none;
+    top: 51px;
+    right: 5%;
+    width: 69%;
+  }
+}
+
+a:hover {
+  color: black;
+  cursor: auto;
+  background-color: #EEEEEE;
+}
+a {
+  padding: 10px;
+  background-color: white;
+  transition: background-color .5s;
+  @media (max-width: 700px) {
+    font-size: 8px;
+  }
+}
+
